[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-benchmarking"
version = "0.1.0"
description = "SLURM array-job generator for ORCA CPU benchmarking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Geoffrey Weal", email = "geoffrey.weal@reannz.co.nz"}
]
keywords = ["orca", "slurm", "hpc", "benchmarking", "chemistry"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
orca-benchmark = "orca_benchmarking.cli:cli"
orca-benchmark-report-opt = "orca_benchmarking.report_opt:main"
